--- a/client/package.json
+++ b/client/package.json
@@ -40,6 +40,7 @@
     "css-loader": "^3.4.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "mobx-react-devtools": "^6.1.1",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1"
